--- a/index.html
+++ b/index.html
@@ -145,6 +145,22 @@
         from { transform: translateX(0); }
         to { transform: translateX(-50%); }
       }
+      
+      /* Modal Animations */
+      @keyframes fade-in {
+        from { opacity: 0; }
+        to { opacity: 1; }
+      }
+      @keyframes fade-in-up {
+        from { opacity: 0; transform: translateY(20px) scale(0.98); }
+        to { opacity: 1; transform: translateY(0) scale(1); }
+      }
+      .animate-fade-in {
+        animation: fade-in 0.3s ease-out forwards;
+      }
+      .animate-fade-in-up {
+         animation: fade-in-up 0.3s ease-out forwards;
+      }
     </style>
   <script type="importmap">
 {
